Fix white space on top of page by replacing top margin by top padding

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -1,5 +1,6 @@
 #navbar {
-  margin: 20px 0 40px;
+  margin: 0px 0 40px;
+  padding-top: 20px;
 
   .desktop-content {
     display: flex;
